--- a/backend/package.json
+++ b/backend/package.json
@@ -19,10 +19,12 @@
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "express-rate-limit": "^6.9.0",
+    "express-winston": "^4.2.0",
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.1",
-    "validator": "^13.9.0"
+    "validator": "^13.9.0",
+    "winston": "^3.10.0"
   },
   "devDependencies": {
     "eslint": "^8.46.0",
